<resources>
    <string name="app_name">Chef On Phone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>


    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_info">View Problem Info</string>
    <string name="action_download">Download</string>
    <string name="action_status">Compilation Status</string>

    <string name="ongoing_contest">Ongoing Contests</string>

    <string name="title_activity_practice">Practice</string>
    <string name="title_activity_contest_list">Contests</string>
    <string name="title_activity_ide">IDE</string>

    <string name="nav_group_practice">Practice</string>
    <string name="nav_practice_beginner">Beginner</string>
    <string name="nav_practice_easy">Easy</string>
    <string name="nav_practice_medium">Medium</string>
    <string name="nav_practice_hard">Hard</string>
    <string name="nav_practice_challenge">Challenge</string>
    <string name="nav_practice_peer">Peer</string>

    <string name="nav_home">Home</string>
    <string name="nav_ide">Code, Compile and Run</string>
    <string name="nav_contest">Contests</string>
    <string name="practice_problem">Practice Problems</string>
    <string name="load_next_20_problems">Load next 20 problems</string>
    <string name="present_contests">Present Contests</string>
    <string name="upcoming_contests">Upcoming Contests</string>

    <string name="problems">Problems</string>
    <string name="problem_code_header">Code</string>
    <string name="problem_name_header">Problem Name</string>
    <string name="problem_submission_header">Successful Submissions</string>
    <string name="notify_me">Notify me.</string>
    <string name="compilation_logs">Compilation Logs</string>
    <string name="problem_code">Problem Code</string>
    <string name="language">Language</string>
    <string name="time">Time</string>
    <string name="solve">Solve</string>
    <string name="compilation_result_heading">Details</string>


</resources>
