<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_status"
        android:icon="@drawable/ic_action_status"
        android:orderInCategory="150"
        android:visible="false"
        android:title="@string/action_status"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_action_download"
        android:orderInCategory="200"
        android:title="@string/action_download"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="300"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
